Replace negative margin fix with grid whitespace-removal fix.
Tested on Latest Chrome, FF, Safari, IE7/8/9.
I had to make the left padding different from the right padding
since the text was appearing skewed to the left with the new
grid fix.

--- a/src/menus/css/menus-paginator.css
+++ b/src/menus/css/menus-paginator.css
@@ -5,16 +5,19 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    letter-spacing: -0.31em; /* Webkit: collapse white-space between units */
+    *letter-spacing: normal; /* reset IE < 8 */
+    *word-spacing: -0.43em; /* IE < 8: collapse white-space between units */
+    text-rendering: optimizespeed; /* Webkit: fixes text-rendering: optimizeLegibility */
 }
 .pure-paginator li {
     display: inline-block;
     *display: inline;
     zoom: 1;
-    margin: 0 -0.25em 0 0;
 }
 .pure-paginator .pure-button {
     border-radius: 0;
-    padding: 0.8em 1.4em;
+    padding: 0.8em 1.4em 0.8em 1.2em;
     vertical-align: top;
     height: 1.1em;
 }
